Funciona suma y resta , multiplicacion no

--- a/src/app/components/directivas/ng-class/ng-class.component.css
+++ b/src/app/components/directivas/ng-class/ng-class.component.css
@@ -1,5 +1,15 @@
-.cuadro{
-    width: 250px;
-    height: 250px;
-    /* background: greenyellow; */
+.cuadro {
+  width: 250px;
+  height: 250px;
+  /* background: greenyellow; */
+}
+
+.inputGrandote {
+  width: 50%;
+  margin-bottom: 100px;
+  height: 50px;
+  /* border-radius: 5px; */
+  font-size: 20px;
+  text-align: center;
+  margin-left: 10px;
 }
