--- a/src/app/components/directivas/ng-class/ng-class.component.html
+++ b/src/app/components/directivas/ng-class/ng-class.component.html
@@ -36,4 +36,8 @@ depende el color en el que se pondra
   </li>
 </ul>
 
-<div class="cuadro" appRandomColor ></div>
+<div class="cuadro" appRandomColor></div>
+<hr />
+<div class="cuadro" appChangeColor></div>
+<hr />
+<input type="text" class="inputGrandote" appChangeColorInput />
