--- a/src/app/components/home/navbar/navbar.component.html
+++ b/src/app/components/home/navbar/navbar.component.html
@@ -22,6 +22,12 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="Pipes">Pipes</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="padre">CEComponentes</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="padre2">CEComponentes2</a>
+      </li>
     </ul>
   </div>
 </nav>
