--- a/src/app/components/comunicacionComponentes/padre2/padre2.component.html
+++ b/src/app/components/comunicacionComponentes/padre2/padre2.component.html
@@ -9,5 +9,5 @@
     <button class="btn btn-outline-warning" (click)="restar()">-</button>
   </div>
   <hr />
-  <app-hijo2 [ValorPadre_Hijo]="valor" (multi)="getvalor($event)"></app-hijo2>
+  <app-hijo2 [ValorPadre_Hijo]="valor" (multi)="getvalor($event)" (divi)="getvalor($event)"></app-hijo2>
 </div>
