--- a/src/app/components/comunicacionComponentes/hijo2/hijo2.component.html
+++ b/src/app/components/comunicacionComponentes/hijo2/hijo2.component.html
@@ -2,6 +2,14 @@
   <h3>{{ ValorPadre_Hijo }}</h3>
 </div>
 <div class="col-12">
-  <button class="btn btn-outline-success">*</button>
-  <button class="btn btn-outline-danger">/</button>
+  <button
+    class="btn btn-outline-success"
+    type="button"
+    (click)="multiplicacion(ValorPadre_Hijo)"
+  >
+    *
+  </button>
+  <button class="btn btn-outline-danger" type="button" (click)="division(ValorPadre_Hijo)">
+    /
+  </button>
 </div>
